# jpeg_wrapped

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
interface/: jpeg_manipulator.h
python/: test.py
src/: jpeg_manipulator.cpp  main.cpp
swig/: jpeg_manipulator.i
